src/test/ui/hygiene/trait_items.stderr
error[E0599]: no method named `f` found for type `()` in the current scope
  --> $DIR/trait_items.rs:17:24
   |
LL |     fn f() { ::baz::m!(); }
   |              ------------ in this macro invocation
...
LL |     pub macro m() { ().f() }
   |                        ^
   |
   = help: items from traits can only be used if the trait is in scope
   = note: the following trait is implemented but not in scope, perhaps add a `use` for it:
           `use foo::T;`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
